
= OpenWFEru "ruote-web2" - CHANGELOG.txt


== ruote-web2 - 0.9.20    not yet released

- todo  #23697 : using rake gems:install for rufus gems from now on
- todo  #23600 : adapted to file renaming in ruote itself and introducing
                 db_errorjournal
- todo  #23185 : moved to blueprint
- todo  #22935 : integrated LinkGenerator
