@@ -41,7 +41,9 @@ class HistoryController < ApplicationController
 
     opts = { :page => params[:page], :order => 'created_at DESC' }
 
-    cs = [ :source, :wfid, :event, :participant ].inject([[]]) do |a, p|
+    cs = [
+      :source, :wfid, :event, :participant, :wfname
+    ].inject([[]]) do |a, p|
       if v = params[p]
         a.first << "#{p} = ?"
         a << v
