@@ -4,6 +4,7 @@
 
 == ruote-web2 - 0.9.20    not yet released
 
+- todo  #23886 : added wfname and wfrevision to DbHistory
 - todo  #23697 : using rake gems:install for rufus gems from now on
 - todo  #23600 : adapted to file renaming in ruote itself and introducing
                  db_errorjournal
